DDP-8248: Send file uploaded notification